<resources>
    <string name="app_name">Skate Tracker</string>
    <string name="title_activity_maps">Skate Tracker</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>

    <string-array name="planets_array">
        <item>Satellite</item>
        <item>Normal</item>
        <item>Hybrid</item>
        <item>Terrain</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_skating">Start Skating</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="tracks">Tracks</string>
    <string name="map">Map</string>
    <string name="search_on_map">Search on map</string>
    <string name="search">Search</string>
    <string name="distance">Distance:</string>
    <string name="time">Time:</string>
    <string name="max_speed">Max Speed:</string>
    <string name="avg_speed">Avg speed:</string>
    <string name="title_activity_profile">ProfileActivity</string>
</resources>
